force-app/main/default/objects/RecordPickerConditionConfig__mdt/RecordPickerConditionConfig__mdt.object-meta.xml
<CustomObject>
    <description>THis metadata stores information about the record picker condition configurations.</description>
    <label>Record Picker Condition Config</label>
    <pluralLabel>Record Picker Condition Configs</pluralLabel>
</CustomObject>