force-app/main/default/objects/RecordPickerConditionConfig__mdt/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>This field is a picklist having condition operators.</description>
    <label>Condition Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eq</fullName>
                <default>true</default>
                <label>Equal</label>
            </value>
            <value>
                <fullName>excludes</fullName>
                <label>Excludes</label>
            </value>
            <value>
                <fullName>gt</fullName>
                <label>Greater Than</label>
            </value>
            <value>
                <fullName>gte</fullName>
                <label>Greater Than Equal To</label>
            </value>
            <value>
                <fullName>in</fullName>
                <label>In</label>
            </value>
            <value>
                <fullName>includes</fullName>
                <label>Includes</label>
            </value>
            <value>
                <fullName>lt</fullName>
                <label>Less Than</label>
            </value>
            <value>
                <fullName>lte</fullName>
                <label>Less Than Equal To</label>
            </value>
            <value>
                <fullName>like</fullName>
                <label>Like</label>
            </value>
            <value>
                <fullName>ne</fullName>
                <label>Not Equal</label>
            </value>
            <value>
                <fullName>nin</fullName>
                <label>Not In</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>