force-app/main/default/objects/RecordPickerConditionConfig__mdt/fields/ConditionFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>ConditionFieldAPI__c</fullName>
    <description>Stores the fieldPath value</description>
    <label>ConditionFieldAPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>