force-app/main/default/objects/RecordPickerConditionConfig__mdt/fields/ConditionValue__c.field-meta.xml
<CustomField>
    <fullName>ConditionValue__c</fullName>
    <description>This represents the value in a condition it can be either a dynamic value or a literal value.</description>
    <label>Condition Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>