force-app/main/default/objects/RecordPickerConditionConfig__mdt/fields/IsDynamic__c.field-meta.xml
<CustomField>
    <fullName>IsDynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field represents if the condition value is a dynamic value so that it can be populated via apex during run time</description>
    <label>Is Dynamic</label>
    <type>Checkbox</type>
</CustomField>