force-app/main/default/objects/RecordPickerConditionConfig__mdt/fields/IsLiteral__c.field-meta.xml
<CustomField>
    <fullName>IsLiteral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field represents if the condition value is a literal value</description>
    <label>Is Literal</label>
    <type>Checkbox</type>
</CustomField>