force-app/main/default/objects/RecordPickerConditionConfig__mdt/fields/RecordPickerConfig__c.field-meta.xml
<CustomField>
    <fullName>RecordPickerConfig__c</fullName>
    <description>The Condition Config metadata HAS-A Record Picker Configuration</description>
    <label>Record Picker Config</label>
    <referenceTo>RecordPickerConfig__mdt</referenceTo>
    <relationshipLabel>Record Picker Condition Configs</relationshipLabel>
    <relationshipName>RecordPickerConditionConfigs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>